packages/typ/tests/fixtures/diagnostics/0675_fcm_existential_escape_pair_02.ml
module type Box_beta = sig
  type t
  val value : t
end

let escape_pair_beta p =
  let module M = (val p : Box_beta) in
  (M.value, M.value)
